samples/_failures_safe/1761475559_49f65c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8887eeb.c: In function ‘main’:
./samples/SAFE/__tmp_b8887eeb.c:181:5: error: expected identifier or ‘(’ at end of input
  181 |     DecompressFunc
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b8887eeb.c:181:5: error: expected declaration or statement at end of input
